--- a/javascript-intro-introduccion-terminada/index.html
+++ b/javascript-intro-introduccion-terminada/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Introducción a JavaScript</title>
+    <title>Repaso de JavaScript curso de fernando herrera</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="assets/img/favicon.png">
 </head>
